--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-mesa-de-trabajo/form-registrar-mesa-de-trabajo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-mesa-de-trabajo/form-registrar-mesa-de-trabajo.component.html
@@ -101,7 +101,11 @@
                             <div class="text-area-quill auxBox">
                                 <quill-editor class="quill-editor-style card" [styles]="editorStyle" [modules]="config"
                                     required (onContentChanged)="maxLength($event, 500)"
-                                    formControlName="actuacionAdelantada" #actuacionAdelantada>
+                                    formControlName="actuacionAdelantada" #actuacionAdelantada
+                                    [class.invalid]="
+                                        (addressForm.get('actuacionAdelantada').invalid && addressForm.get('actuacionAdelantada').touched) ||
+                                        (addressForm.get('actuacionAdelantada').invalid && estaEditando)
+                                      ">
                                 </quill-editor>
                             </div>
                             <span class="contador miles" *ngIf="addressForm.controls.actuacionAdelantada.value">
@@ -150,7 +154,11 @@
                             <div class="text-area-quill auxBox">
                                 <quill-editor class="quill-editor-style card" [styles]="editorStyle" [modules]="config"
                                     required (onContentChanged)="maxLength($event, 500)"
-                                    formControlName="proximaActuacionRequerida" #proximaActuacionRequerida>
+                                    formControlName="proximaActuacionRequerida" #proximaActuacionRequerida
+                                    [class.invalid]="
+                                        (addressForm.get('proximaActuacionRequerida').invalid && addressForm.get('proximaActuacionRequerida').touched) ||
+                                        (addressForm.get('proximaActuacionRequerida').invalid && estaEditando)
+                                      ">
                                 </quill-editor>
                             </div>
                             <span class="contador miles" *ngIf="addressForm.controls.proximaActuacionRequerida.value">
@@ -284,7 +292,11 @@
                             <div class="text-area-quill auxBox">
                                 <quill-editor class="quill-editor-style card" [styles]="editorStyle" [modules]="config"
                                     required (onContentChanged)="maxLength($event, 1000)"
-                                    formControlName="observaciones" #observaciones>
+                                    formControlName="observaciones" #observaciones
+                                    [class.invalid]="
+                                        (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                                        (addressForm.get('observaciones').invalid && estaEditando)
+                                      ">
                                 </quill-editor>
                             </div>
                             <span class="contador miles" *ngIf="addressForm.controls.observaciones.value">
