--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/verdetalleedit-avance-actua-derivadas/verdetalleedit-avance-actua-derivadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/verdetalleedit-avance-actua-derivadas/verdetalleedit-avance-actua-derivadas.component.html
@@ -1,6 +1,7 @@
 <div class="container text-center">
     <div class="text-right">
-        <a routerLink="/registrarActuacionesControversiasContractuales/actualizarTramite/{{this.controversiaID}}" mat-button color="primary" class="btn-regresar">
+        <a routerLink="/registrarActuacionesControversiasContractuales/actualizarTramite/{{this.controversiaID}}"
+            mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
@@ -15,33 +16,38 @@
     <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
         <mat-card class="shipping-card">
             <mat-card-content align="left">
-                <p><strong>Actuación en la que se requiere participación o insumo de la fiduciaria: </strong>{{controversia?.numeroActuacionFormat}}</p>
+                <p><strong>Actuación en la que se requiere participación o insumo de la fiduciaria:
+                    </strong>{{controversia?.numeroActuacionFormat}}</p>
                 <p><strong>Fecha de la actuación adelantada: </strong>{{controversia?.fechaActuacion | date:
                     'dd/MM/yyyy'}}</p>
                 <div class="row">
                     <div class="col-md-8">
-                      <div class="row">
-                        <div class="pr-1">
-                          <label class="label-left" for="fechaActuacionDerivada">Fecha de la actuación derivada</label>
+                        <div class="row">
+                            <div class="pr-1">
+                                <label class="label-left" for="fechaActuacionDerivada">Fecha de la actuación
+                                    derivada</label>
+                            </div>
+                            <div class="col d-flex align-items-center">
+                                <mat-form-field class="example-full-width">
+                                    <input matInput formControlName="fechaActuacionDerivada"
+                                        [matDatepicker]="pickerFecha" readonly (click)="pickerFecha.open()" required
+                                        placeholder="DD/MM/AAAA">
+                                    <mat-datepicker #pickerFecha></mat-datepicker>
+                                </mat-form-field>
+                                <button mat-button color="primary" type="button" (click)="pickerFecha.open()"
+                                    class="btn-calendario">
+                                    <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
+                                </button>
+                            </div>
                         </div>
-                        <div class="col d-flex align-items-center">
-                          <mat-form-field class="example-full-width">
-                            <input matInput formControlName="fechaActuacionDerivada" [matDatepicker]="pickerFecha"  readonly
-                              (click)="pickerFecha.open()" required placeholder="DD/MM/AAAA">
-                            <mat-datepicker #pickerFecha></mat-datepicker>
-                          </mat-form-field>
-                          <button mat-button color="primary" type="button" (click)="pickerFecha.open()" class="btn-calendario">
-                            <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
-                          </button>
-                        </div>
-                      </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="descripcionActuacionAdelantada">Próxima actuación requerida</label>
+                                <label class="label-left" for="descripcionActuacionAdelantada">Próxima actuación
+                                    requerida</label>
                             </div>
                         </div>
                     </div>
@@ -51,15 +57,21 @@
                         <div>
                             <div class="d-flex align-items-center">
                                 <div class="text-area-quill auxBox">
-                                    <quill-editor class="quill-editor-style card" [styles]="editorStyle" [modules]="config"
-                                        required (onContentChanged)="maxLength($event, 500)"
-                                        formControlName="descripcionActuacionAdelantada" #descripcionActuacionAdelantada>
+                                    <quill-editor class="quill-editor-style card" [styles]="editorStyle"
+                                        [modules]="config" required (onContentChanged)="maxLength($event, 500)"
+                                        formControlName="descripcionActuacionAdelantada" #descripcionActuacionAdelantada
+                                        [class.invalid]="
+                                        (addressForm.get('descripcionActuacionAdelantada').invalid && addressForm.get('descripcionActuacionAdelantada').touched) ||
+                                        (addressForm.get('descripcionActuacionAdelantada').invalid && estaEditando)
+                                      ">
                                     </quill-editor>
                                 </div>
-                                <span class="contador miles" *ngIf="addressForm.controls.descripcionActuacionAdelantada.value">
+                                <span class="contador miles"
+                                    *ngIf="addressForm.controls.descripcionActuacionAdelantada.value">
                                     {{500 - (textoLimpio(descripcionActuacionAdelantada.quillEditor,500))}}
                                 </span>
-                                <span class="contador miles" *ngIf="!addressForm.controls.descripcionActuacionAdelantada.value">
+                                <span class="contador miles"
+                                    *ngIf="!addressForm.controls.descripcionActuacionAdelantada.value">
                                     500
                                 </span>
                             </div>
@@ -70,12 +82,14 @@
                     <div class="col-md-12">
                         <div class="row">
                             <div class="pr-1">
-                                <label class="label-left" for="estadoActuacionDerivada">Estado de la actuación derivada</label>
+                                <label class="label-left" for="estadoActuacionDerivada">Estado de la actuación
+                                    derivada</label>
                             </div>
                             <div class="col">
                                 <mat-form-field class="select-width">
                                     <mat-select formControlName="estadoActuacionDerivada" required>
-                                        <mat-option *ngFor="let estadoActuacionDerivada of estadoDerivadaArray" [value]="estadoActuacionDerivada">
+                                        <mat-option *ngFor="let estadoActuacionDerivada of estadoDerivadaArray"
+                                            [value]="estadoActuacionDerivada">
                                             {{ estadoActuacionDerivada.nombre }}
                                         </mat-option>
                                     </mat-select>
@@ -98,9 +112,12 @@
                         <div>
                             <div class="d-flex align-items-center">
                                 <div class="text-area-quill auxBox">
-                                    <quill-editor class="quill-editor-style card" [styles]="editorStyle" [modules]="config"
-                                        required (onContentChanged)="maxLength($event, 1000)"
-                                        formControlName="observaciones" #observaciones>
+                                    <quill-editor class="quill-editor-style card" [styles]="editorStyle"
+                                        [modules]="config" required (onContentChanged)="maxLength($event, 1000)"
+                                        formControlName="observaciones" #observaciones [class.invalid]="
+                                        (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                                        (addressForm.get('observaciones').invalid && estaEditando)
+                                      ">
                                     </quill-editor>
                                 </div>
                                 <span class="contador miles" *ngIf="addressForm.controls.observaciones.value">
@@ -130,10 +147,10 @@
                             </div>
                             <div class="col">
                                 <mat-form-field class="full-width">
-                                    <input matInput #urlSoporte type="text" formControlName="urlSoporte"
-                                      required>
+                                    <input matInput #urlSoporte type="text" formControlName="urlSoporte" required>
                                 </mat-form-field>
-                                <span class="info-url">Indique la ruta en la que se encuentran los documentos de soporte del registro de la actuación de trámite.</span>
+                                <span class="info-url">Indique la ruta en la que se encuentran los documentos de soporte
+                                    del registro de la actuación de trámite.</span>
                             </div>
                         </div>
                     </div>
