--- a/asivamosffie.web/asivamosffie/src/assets/scss/_general.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_general.scss
@@ -345,6 +345,10 @@ input[type='number']::-webkit-outer-spin-button {
   padding: 0 1.2em;
   font-size: 1em !important;
   text-align: center;
+
+  &.max-40em {
+    max-width: 40em;
+  }
 }
 
 %tooltip {
